crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__register_segment__empty_manifest_data.snap
---
source: crates/store/re_redap_tests/src/tests/register_segment.rs
expression: filtered_batch.format_snapshot(false)
---
┌──────────────────┬──────────────────┬──────────────────┬──────────────────┬─────────────────────┬───────────────────────────┐
│ rerun_layer_name ┆ rerun_segment_id ┆ rerun_layer_type ┆ rerun_num_chunks ┆ rerun_schema_sha256 ┆ rerun_registration_status │
╞══════════════════╪══════════════════╪══════════════════╪══════════════════╪═════════════════════╪═══════════════════════════╡
└──────────────────┴──────────────────┴──────────────────┴──────────────────┴─────────────────────┴───────────────────────────┘
