crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__register_segment__register_prefix_manifest_manifest_schema.snap
---
source: crates/store/re_redap_tests/src/tests/register_segment.rs
expression: batch.format_schema_snapshot()
---
rerun_last_updated_at: Timestamp(ns)
rerun_layer_name: Utf8
rerun_layer_type: Utf8
rerun_num_chunks: u64
rerun_registration_status: Utf8
rerun_registration_time: Timestamp(ns)
rerun_schema_sha256: FixedSizeBinary[32]
rerun_segment_id: Utf8
rerun_size_bytes: u64
rerun_storage_url: Utf8
